<resources>
    <string name="app_name">12xue老师端</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="skip">跳过 >></string>
    <string name="hint_account">帐号/手机号</string>
    <string name="hint_psw">密码</string>
    <string name="psw">密码</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="QQ">QQ</string>
    <string name="wechat">微信</string>
    <string name="sina">微博</string>
    <string name="third_part_login">第三方登录</string>
    <string name="title_activity_login">登录</string>
    <string name="snackbar_retry">重试</string>
    <string name="title_activity_register">注册</string>
    <string name="register_input_phone">请输入手机号码</string>
    <string name="register_input_code">请输入验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_realname">真实姓名</string>
    <string name="register_next_step">下一步</string>
    <string name="title_activity_tch_home">首页</string>
    <string name="home_tab_home">首页</string>
    <string name="home_tab_sns">社区</string>
    <string name="home_tab_i_edu">I·教育</string>
    <string name="home_tab_my">我的</string>
    <string name="home_homework">作业</string>
    <string name="home_course">课程</string>
    <string name="home_class">课堂</string>
    <string name="home_i_edu">I·教育</string>
    <string name="my_setting">设置</string>
    <string name="my_notice">家长通知</string>
    <string name="my_phonebook">通讯录</string>
    <string name="my_assessment">综合评价</string>
    <string name="my_update">版本更新</string>
    <string name="my_question">常见问题</string>
    <string name="my_feedback">意见反馈</string>
    <string name="my_about">关于12xue</string>
    <string name="setting_update_user_icon">修改头像</string>
    <string name="setting_user_info">个人资料</string>
    <string name="setting_duty_info">班级信息</string>
    <string name="setting_update_psw">修改密码</string>
    <string name="setting_psw_security">密码保护</string>
    <string name="setting_vibrate">振动开关</string>
    <string name="setting_exit">退出</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
