<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/g3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/app_name"
        android:background="@mipmap/tch_guide_page_04" />
    <Button
        android:id="@id/btnGoToLogin"
        android:layout_width="267dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/login"
        android:background="@drawable/guide_btn_bg_white_stroke"
        android:textColor="@color/white_text_color"
        android:layout_marginTop="181dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>


    <Button
        android:id="@id/btnGoToRegister"
        android:layout_width="267dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:background="@drawable/guide_btn_bg_register"
        android:textColor="@color/white_text_color"
        android:text="@string/register"
        android:layout_marginTop="84dp"
        android:layout_alignTop="@id/btnGoToLogin"
        android:layout_alignLeft="@id/btnGoToLogin"
        android:layout_alignStart="@id/btnGoToLogin"/>

    <TextView
        android:id="@id/txtSkip"
        android:layout_width="113dp"
        android:layout_height="29dp"
        android:layout_marginRight="33dp"
        android:layout_marginEnd="33dp"
        android:text="@string/skip"
        android:gravity="center"
        android:textColor="#e06671"
        android:layout_marginTop="53dp"
        android:layout_below="@id/btnGoToRegister"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>