<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.user.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:id="@id/llayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/space_5"
            android:textColorHint="@color/black_text_color_38">

            <android.support.design.widget.TextInputEditText
                android:id="@id/editAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginStart="@dimen/space_16"
                android:background="@color/white"
                android:hint="@string/hint_account"
                android:inputType="text"
                android:textSize="@dimen/text_size_body" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginStart="@dimen/space_16"
            android:background="@color/divider_bg_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="@dimen/space_10"
                android:layout_marginRight="@dimen/space_10"
                android:layout_marginTop="@dimen/space_10"
                android:layout_toLeftOf="@id/scShowPsw"
                android:layout_toStartOf="@id/scShowPsw"
                android:textColorHint="@color/black_text_color_38">

                <android.support.design.widget.TextInputEditText
                    android:id="@id/editPsw"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/space_16"
                    android:layout_marginStart="@dimen/space_16"
                    android:layout_toLeftOf="@id/scShowPsw"
                    android:layout_toStartOf="@id/scShowPsw"
                    android:background="@color/white"
                    android:hint="@string/hint_psw"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size_body" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.SwitchCompat
                android:id="@id/scShowPsw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_16"
                android:layout_marginRight="@dimen/space_16" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/llayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/space_16"
        android:layout_marginRight="@dimen/space_16"
        android:layout_marginTop="@dimen/space_14"
        android:background="@drawable/tch_btn_bg_common"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white_text_color"
        android:textSize="@dimen/text_size_button" />

    <Button
        android:id="@id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/space_16"
        android:layout_marginRight="@dimen/space_16"
        android:layout_marginTop="@dimen/space_14"
        android:background="@drawable/tch_btn_bg_common"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white_text_color"
        android:textSize="@dimen/text_size_button" />

    <TextView
        android:id="@id/txtForgetPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/btnReg"
        android:layout_alignRight="@id/btnReg"
        android:layout_below="@id/btnReg"
        android:layout_marginTop="@dimen/space_14"
        android:text="@string/forget_psw"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/text_size_caption"
        android:visibility="visible" />


    <TextView
        android:id="@id/txtWeChatLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/btnLogin"
        android:layout_alignStart="@id/btnLogin"
        android:layout_alignTop="@id/txtQQLogin"

        android:layout_gravity="center"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:drawableTop="@mipmap/tch_ic_wechat"
        android:gravity="center"
        android:text="@string/wechat"
        android:textColor="@color/black_text_color_87"
        android:textSize="@dimen/text_size_caption" />

    <TextView
        android:id="@id/txtQQLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/txtSinaLogin"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:drawableTop="@mipmap/tch_ic_qq"
        android:gravity="center"
        android:text="@string/QQ"
        android:textColor="@color/black_text_color_87"
        android:textSize="@dimen/text_size_caption" />

    <TextView
        android:id="@id/txtSinaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/btnLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@id/btnLogin"
        android:layout_gravity="center"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:drawableTop="@mipmap/tch_ic_sina"
        android:gravity="center"
        android:text="@string/sina"
        android:textColor="@color/black_text_color_87"
        android:textSize="@dimen/text_size_caption" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtQQLogin"
        android:layout_alignEnd="@id/btnLogin"
        android:layout_alignRight="@id/btnLogin"
        android:layout_marginBottom="33dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/space_0.5"
                android:background="@color/divider_bg_color" />


        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/third_part_login"
            android:textColor="@color/black_text_color_38" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/space_0.5"
                android:background="@color/divider_bg_color" />


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
