<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cn.com.gridinfo.gridinfo_tch.activity.TchHomeActivity"
    tools:showIn="@layout/activity_tch_home">

    <FrameLayout
        android:id="@id/flayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@id/llayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_0.5"
            android:background="@color/divider_bg_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56"
            android:background="@color/bottom_button_bg_color"
            android:orientation="horizontal">

            <TextView
                android:id="@id/txtHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/tch_home_normal"
                android:gravity="center"
                android:text="@string/home_tab_home"
                android:textColor="@color/black_text_color_54"
                android:textSize="@dimen/text_size_caption" />

            <TextView
                android:id="@id/txtSns"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/tch_sns_normal"
                android:gravity="center"
                android:text="@string/home_tab_sns"
                android:textColor="@color/black_text_color_54"
                android:textSize="@dimen/text_size_caption" />

            <TextView
                android:id="@id/txtIEdu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/tch_i_education_normal"
                android:gravity="center"
                android:text="@string/home_tab_i_edu"
                android:textColor="@color/black_text_color_54"
                android:textSize="@dimen/text_size_caption" />

            <TextView
                android:id="@id/txtMy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/tch_my_normal"
                android:gravity="center"
                android:text="@string/home_tab_my"
                android:textColor="@color/black_text_color_54"
                android:textSize="@dimen/text_size_caption" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
