<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cn.com.gridinfo.gridinfo_tch.activity.reg.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:id="@id/llayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/space_5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="@color/black_text_color_38">

            <android.support.design.widget.TextInputEditText
                android:id="@id/editPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginStart="@dimen/space_16"
                android:background="@color/white"
                android:hint="@string/register_input_phone"
                android:inputType="phone"
                android:textSize="@dimen/text_size_body" />
        </android.support.design.widget.TextInputLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginStart="@dimen/space_16"
            android:background="@color/divider_bg_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="13"
                android:layout_marginTop="@dimen/space_5"
                android:textColorHint="@color/black_text_color_38">

                <android.support.design.widget.TextInputEditText
                    android:id="@id/editInputCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/space_16"
                    android:layout_marginStart="@dimen/space_16"
                    android:maxLength="6"
                    android:layout_toLeftOf="@id/btnSendCode"
                    android:layout_toStartOf="@id/btnSendCode"
                    android:background="@color/white"
                    android:hint="@string/register_input_code"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_body" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@id/btnSendCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/space_6"
                android:layout_marginEnd="@dimen/space_16"
                android:layout_marginRight="@dimen/space_16"
                android:layout_marginTop="@dimen/space_6"
                android:layout_weight="5"
                android:background="@drawable/tch_btn_bg_common"
                android:gravity="center"
                android:text="@string/register_get_code"
                android:textSize="@dimen/text_size_button"
                android:textColor="@color/white_text_color" />
        </LinearLayout>
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:paddingTop="@dimen/space_5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/space_10"
        android:textColorHint="@color/black_text_color_38">

        <android.support.design.widget.TextInputEditText
            android:id="@id/editPsw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/llayout"
            android:background="@color/white"
            android:hint="@string/psw"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginStart="@dimen/space_16"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_body" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:paddingTop="@dimen/space_5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/space_10"
        android:textColorHint="@color/black_text_color_38">

        <android.support.design.widget.TextInputEditText
            android:id="@id/editRealname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/editPsw"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginStart="@dimen/space_16"
            android:background="@color/white"
            android:hint="@string/register_realname"
            android:inputType="text"
            android:textSize="@dimen/text_size_body" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@id/btnCommit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/space_16"
        android:layout_marginRight="@dimen/space_16"
        android:layout_marginTop="30dp"
        android:background="@drawable/tch_btn_bg_common"
        android:gravity="center"
        android:text="@string/register_next_step"
        android:textColor="@color/white_text_color"
        android:textSize="@dimen/text_size_button" />
</LinearLayout>
